Initial OpenWRT auto-build setup

--- a/.github/workflows/build-custom.yml
+++ b/.github/workflows/build-custom.yml
@@ -67,4 +67,4 @@ jobs:
       with:
         name: firmware
         path: |
-          openwrt/bin/targets/**/openwrt-*.bin
+          openwrt/bin/targets/
