--- a/.config
+++ b/.config
@@ -2,10 +2,60 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
 CONFIG_TARGET_ramips_mt76x8_DEVICE_tplink_tl-mr6400-v5=y
 
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_kmod-usb-serial-option=y
-CONFIG_PACKAGE_usb-modeswitch=y
+# LuCI GUI dan tools modem
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_luci-proto-qmi=y
+CONFIG_PACKAGE_luci-proto-3g=y
+CONFIG_PACKAGE_luci-proto-modemmanager=y
+CONFIG_PACKAGE_modemmanager=y
+CONFIG_PACKAGE_chat=y
+CONFIG_PACKAGE_wwan=y
+CONFIG_PACKAGE_qmi-utils=y
+CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-option=y
+CONFIG_PACKAGE_kmod-usb-serial-wwan=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
+CONFIG_PACKAGE_usb-modeswitch=y
+
+# Extra
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-opkg=y
+CONFIG_PACKAGE_luci-app-network-sharing=y
+CONFIG_PACKAGE_luci-app-commands=y
+CONFIG_PACKAGE_luci-app-statistics=y
+
+# Include initramfs image
+CONFIG_TARGET_INITRAMFS=y
+CONFIG_TARGET_INITRAMFS_COMPRESSION_GZIP=y
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
+
+# Include factory image
+CONFIG_TARGET_IMAGES_GZIP=y
+
+# Filesystem & tool basic
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-nls-cp437=y
+CONFIG_PACKAGE_kmod-nls-iso8859-1=y
+CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+
+# RAM 128MB optimization (jaga supaya system tidak limit default)
+CONFIG_KERNEL_BUILD_DOMAIN="mr6400"
+CONFIG_KERNEL_BUILD_USER="github"
+
+# Strip debug
+CONFIG_STRIP_KERNEL_EXPORT_SYMBOLS=y
+CONFIG_STRIP_KERNEL_DEBUG_INFO=y
+CONFIG_STRIP_ALL_KERNEL_SYMBOLS=y
