--- a/.config
+++ b/.config
@@ -1,61 +1,75 @@
+CONFIG_MODULES=y
+CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt76x8=y
-CONFIG_TARGET_ramips_mt76x8_DEVICE_tplink_tl-mr6400-v5=y
+CONFIG_TARGET_ramips_mt7628=y
+CONFIG_TARGET_ramips_mt7628_DEVICE_tplink_tl-mr6400-v5=y
 
-# LuCI GUI dan tools modem
+# Kernel & Filesystem
+CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
+CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
+
+# Override RAM to 128MB via DTS patch (we'll include it in files/)
+CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7628_DEVICE_tplink_tl-mr6400-v5=""
+
+# LuCI web GUI
 CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-proto-qmi=y
-CONFIG_PACKAGE_luci-proto-3g=y
+CONFIG_PACKAGE_luci-proto-ncm=y
 CONFIG_PACKAGE_luci-proto-modemmanager=y
-CONFIG_PACKAGE_modemmanager=y
-CONFIG_PACKAGE_chat=y
-CONFIG_PACKAGE_wwan=y
-CONFIG_PACKAGE_qmi-utils=y
+
+# Modem support (Fibocom L716)
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
 CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-option=y
 CONFIG_PACKAGE_kmod-usb-serial-wwan=y
-CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
+CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_usb-modeswitch=y
+CONFIG_PACKAGE_uqmi=y
+CONFIG_PACKAGE_modemmanager=y
+CONFIG_PACKAGE_chat=y
+CONFIG_PACKAGE_minicom=y
 
-# Extra
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
-CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-network-sharing=y
-CONFIG_PACKAGE_luci-app-commands=y
-CONFIG_PACKAGE_luci-app-statistics=y
+# Network tools
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_ping=y
+CONFIG_PACKAGE_etherwake=y
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_curl=y
 
-# Include initramfs image
-CONFIG_TARGET_INITRAMFS=y
-CONFIG_TARGET_INITRAMFS_COMPRESSION_GZIP=y
-CONFIG_TARGET_ROOTFS_INITRAMFS=y
+# Busybox applets
+CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_BUSYBOX_CONFIG_CROND=y
+CONFIG_BUSYBOX_CONFIG_CRONTAB=y
 
-# Include factory image
-CONFIG_TARGET_IMAGES_GZIP=y
-
-# Filesystem & tool basic
+# Misc
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
-CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-fs-exfat=y
-CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_zlib=y
+CONFIG_PACKAGE_liblucihttp=y
+CONFIG_PACKAGE_liblucihttp-lua=y
 
-# RAM 128MB optimization (jaga supaya system tidak limit default)
-CONFIG_KERNEL_BUILD_DOMAIN="mr6400"
-CONFIG_KERNEL_BUILD_USER="github"
+# Include all image types
+CONFIG_TARGET_IMAGES_PAD=y
+CONFIG_TARGET_MULTI_PROFILE=y
 
-# Strip debug
-CONFIG_STRIP_KERNEL_EXPORT_SYMBOLS=y
-CONFIG_STRIP_KERNEL_DEBUG_INFO=y
-CONFIG_STRIP_ALL_KERNEL_SYMBOLS=y
+# Preserve space
+CONFIG_DEVEL=n
+CONFIG_BUILD_LOG=n
+CONFIG_SDK=n
+CONFIG_IMAGEOPT=y
