--- a/.config
+++ b/.config
@@ -1,75 +1,35 @@
-CONFIG_MODULES=y
-CONFIG_HAVE_DOT_CONFIG=y
+# Configuration for TL-MR6400 v5 + Fibocom L716
 CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7628=y
-CONFIG_TARGET_ramips_mt7628_DEVICE_tplink_tl-mr6400-v5=y
-
-# Kernel & Filesystem
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_ROOTFS_INITRAMFS=y
-CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
-
-# Override RAM to 128MB via DTS patch (we'll include it in files/)
-CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7628_DEVICE_tplink_tl-mr6400-v5=""
-
-# LuCI web GUI
+CONFIG_TARGET_ramips_mt76x8=y
+CONFIG_TARGET_ramips_mt76x8_DEVICE_tplink_tl-mr6400-v5=y
+CONFIG_DEVEL=y
+CONFIG_TOOLCHAINOPTS=y
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_luci-proto-qmi=y
-CONFIG_PACKAGE_luci-proto-ncm=y
-CONFIG_PACKAGE_luci-proto-modemmanager=y
-
-# Modem support (Fibocom L716)
-CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
-CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-option=y
-CONFIG_PACKAGE_kmod-usb-serial-wwan=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_usb-modeswitch=y
-CONFIG_PACKAGE_uqmi=y
-CONFIG_PACKAGE_modemmanager=y
+CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_chat=y
 CONFIG_PACKAGE_minicom=y
-
-# Network tools
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
-CONFIG_PACKAGE_ping=y
-CONFIG_PACKAGE_etherwake=y
-CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-option=y
+CONFIG_PACKAGE_kmod-usb-wdm=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=n
+CONFIG_PACKAGE_uqmi=y
+CONFIG_PACKAGE_qmi-utils=y
 CONFIG_PACKAGE_curl=y
-
-# Busybox applets
-CONFIG_BUSYBOX_CUSTOM=y
-CONFIG_BUSYBOX_CONFIG_CROND=y
-CONFIG_BUSYBOX_CONFIG_CRONTAB=y
-
-# Misc
-CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
-CONFIG_PACKAGE_kmod-nls-cp437=y
-CONFIG_PACKAGE_kmod-nls-iso8859-1=y
-CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-uhttpd=y
-CONFIG_PACKAGE_uhttpd=y
-CONFIG_PACKAGE_uhttpd-mod-ubus=y
-CONFIG_PACKAGE_zlib=y
-CONFIG_PACKAGE_liblucihttp=y
-CONFIG_PACKAGE_liblucihttp-lua=y
-
-# Include all image types
-CONFIG_TARGET_IMAGES_PAD=y
-CONFIG_TARGET_MULTI_PROFILE=y
-
-# Preserve space
-CONFIG_DEVEL=n
-CONFIG_BUILD_LOG=n
-CONFIG_SDK=n
-CONFIG_IMAGEOPT=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_kmod-nls-base=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_luci-app-commands=y
+CONFIG_PACKAGE_luci-app-diag-core=y
+CONFIG_PACKAGE_luci-app-modeminfo=y
+CONFIG_PACKAGE_coreutils=y
