--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,36 @@
-name: Build OpenWrt for MR6400 v5 + L716
+name: Build OpenWrt TL-MR6400 + L716 Firmware
 
 on:
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
+      - name: Set up environment
         run: |
           sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk \
-            gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-            python3-distutils rsync unzip zlib1g-dev file wget python3
+          sudo apt install -y build-essential clang flex bison g++ gawk             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev             python3-distutils rsync unzip zlib1g-dev file wget
 
-      - name: Clone OpenWrt
+      - name: Clone OpenWrt source
         run: |
-          git clone https://github.com/openwrt/openwrt -b openwrt-23.05 --depth=1 source
-          cp -r files source/files
-          cp .config source/.config
-
-      - name: Build Firmware
-        run: |
-          cd source
+          git clone https://github.com/openwrt/openwrt.git openwrt
+          cd openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+
+      - name: Copy custom files and config
+        run: |
+          cp -r files openwrt/files
+          cp .config openwrt/.config
+
+      - name: Build firmware
+        run: |
+          cd openwrt
           make defconfig
           make -j$(nproc) download world
-
-      - name: Upload Firmware
-        uses: actions/upload-artifact@v4
-        with:
-          name: openwrt-mr6400-l716
-          path: source/bin/targets/
