--- a/.config
+++ b/.config
@@ -1,35 +1,77 @@
-# Configuration for TL-MR6400 v5 + Fibocom L716
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
 CONFIG_TARGET_ramips_mt76x8_DEVICE_tplink_tl-mr6400-v5=y
-CONFIG_DEVEL=y
-CONFIG_TOOLCHAINOPTS=y
+
+# Build types
+CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
+
+# Essential packages
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-proto-qmi=y
-CONFIG_PACKAGE_wwan=y
-CONFIG_PACKAGE_chat=y
-CONFIG_PACKAGE_minicom=y
-CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-option=y
-CONFIG_PACKAGE_kmod-usb-wdm=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb3=n
-CONFIG_PACKAGE_uqmi=y
-CONFIG_PACKAGE_qmi-utils=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_kmod-nls-base=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-networkshares=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-proto-ppp=y
+CONFIG_PACKAGE_luci-proto-ncm=y
+
+# Kernel modules for modem
 CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-option=y
+CONFIG_PACKAGE_kmod-usb-serial-wwan=y
+CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
-CONFIG_PACKAGE_luci-app-commands=y
-CONFIG_PACKAGE_luci-app-diag-core=y
-CONFIG_PACKAGE_luci-app-modeminfo=y
+
+# Fibocom L716 support
+CONFIG_PACKAGE_chat=y
+CONFIG_PACKAGE_comgt=y
+CONFIG_PACKAGE_comgt-ncm=y
+CONFIG_PACKAGE_wwan=y
+CONFIG_PACKAGE_usb-modeswitch=y
+
+# Tools and diagnostics
+CONFIG_PACKAGE_iputils-ping=y
+CONFIG_PACKAGE_iptables=y
 CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_screen=y
+
+# Networking and modem control
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
+CONFIG_PACKAGE_ppp-mod-ncm=y
+CONFIG_PACKAGE_uqmi=y
+CONFIG_PACKAGE_minicom=y
+CONFIG_PACKAGE_picocom=y
+CONFIG_PACKAGE_luci-app-sms-tool=y
+CONFIG_PACKAGE_luci-app-ncm=y
+CONFIG_PACKAGE_luci-app-modemmanager=y
+
+# Optional logging
+CONFIG_PACKAGE_logd=y
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_luci-app-statistics=y
+
+# Filesystem tools
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-nls-base=y
+
+# System size optimization (disable some extras)
+CONFIG_PACKAGE_ipv6=n
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=n
+CONFIG_PACKAGE_luci-proto-ipv6=n
+CONFIG_PACKAGE_kmod-ipv6=n
