--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build OpenWrt TL-MR6400 + L716 Firmware
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - "main"
   workflow_dispatch:
 
 jobs:
@@ -12,10 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up environment
+      - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev             python3-distutils rsync unzip zlib1g-dev file wget
+          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib \
+            g++-multilib gettext git libncurses-dev libssl-dev python3-distutils \
+            rsync unzip zlib1g-dev file wget python3 python3-pip
 
       - name: Clone OpenWrt source
         run: |
@@ -33,4 +36,10 @@ jobs:
         run: |
           cd openwrt
           make defconfig
-          make -j$(nproc) download world
+          make -j$(nproc)
+
+      - name: Archive firmware
+        uses: actions/upload-artifact@v4
+        with:
+          name: OpenWrt-MR6400-L716
+          path: openwrt/bin/targets/
