--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,73 +1,40 @@
-# Nama Workflow Anda
-name: Build Minimal OpenWrt for MR3420v5 (No LuCI)
+name: Build OpenWrt MT7628 + Fibocom L716
 
-# Pemicu Workflow
 on:
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
-    # Menggunakan Ubuntu 22.04 untuk kompatibilitas
     runs-on: ubuntu-22.04
 
     steps:
-      # Langkah 1: Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Langkah 2: Instal dependensi
-      - name: Install build dependencies
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-          gettext git libncurses5-dev libssl-dev python3-full rsync unzip zlib1g-dev \
-          file wget
+          sudo apt update
+          sudo apt install -y build-essential clang flex bison g++ gawk             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev             python3-distutils rsync unzip zlib1g-dev file wget python3
 
-      # Langkah 3: Unduh source code OpenWrt
-      - name: Clone OpenWrt source code
-        run: git clone https://github.com/openwrt/openwrt.git -b v23.05.4 openwrt
+      - name: Clone OpenWrt source
+        run: |
+          git clone https://github.com/openwrt/openwrt -b v22.03 openwrt
+          cp config/.config openwrt/.config
+          cp -r files openwrt/files
 
-      # Langkah 4: Perbarui feeds
-      - name: Update and install feeds
+      - name: Build firmware
         run: |
           cd openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
-      # Langkah 5: Buat file .config minimalis
-      - name: Generate custom .config file
-        run: |
-          cd openwrt
-          cat <<'EOF' > .config
-          # Target Perangkat
-          CONFIG_TARGET_ramips=y
-          CONFIG_TARGET_ramips_mt76x8=y
-          CONFIG_TARGET_ramips_mt76x8_DEVICE_tplink_tl-mr3420-v5=y
-
-          # === RESEP INTI (WAJIB ADA) ===
-          CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=y
-          CONFIG_PACKAGE_modemmanager=y
-          
-          # CATATAN: LuCI sengaja TIDAK disertakan untuk menghemat ruang
-          EOF
-
-      # Langkah 6: Lengkapi konfigurasi
-      - name: Expand .config with defaults
-        run: |
-          cd openwrt
           make defconfig
+          make download -j8
+          make -j$(nproc) || make -j1 V=s
 
-      # Langkah 7: Build firmware (mode debug untuk log jika gagal)
-      - name: Build the firmware
-        run: |
-          cd openwrt
-          make -j1 V=s
-
-      # Langkah 8: Unggah hasil build
-      - name: Upload firmware artifact
+      - name: Upload firmware
         uses: actions/upload-artifact@v4
         with:
-          name: openwrt-firmware-mr3420v5-minimal
-          path: |
-            openwrt/bin/targets/ramips/mt76x8/*factory.bin
-            openwrt/bin/targets/ramips/mt76x8/*sysupgrade.bin
+          name: OpenWrt-MT7628-Fibocom
+          path: openwrt/bin/targets/
