--- a/config/.config
+++ b/config/.config
@@ -1,34 +1,36 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
-CONFIG_TARGET_ramips_mt76x8_DEVICE_tplink_tl-mr3020-v1=y
+CONFIG_TARGET_ramips_mt76x8_DEVICE_generic=y
 
 CONFIG_IMAGEOPT=y
+
+# GUI & Base System
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-proto-qmi=y
-CONFIG_PACKAGE_uqmi=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-option=y
-CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-mt76x2=y
-CONFIG_PACKAGE_kmod-mt76x8=y
-CONFIG_PACKAGE_wpad-basic-mbedtls=y
-CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
-CONFIG_PACKAGE_kmod-usb-core=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-ehci=y
-CONFIG_PACKAGE_kmod-nls-base=y
-CONFIG_PACKAGE_chat=y
-CONFIG_PACKAGE_ppp=y
-CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_dnsmasq=y
-CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_opkg=y
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_busybox=y
+CONFIG_BUSYBOX_CONFIG_HTTPD=y
 CONFIG_PACKAGE_netifd=y
 CONFIG_PACKAGE_dropbear=y
-CONFIG_PACKAGE_uhttpd=y
+
+# Network
+CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_firewall4=y
+
+# Wireless
+CONFIG_PACKAGE_kmod-mt76x8=y
+CONFIG_PACKAGE_wpad-mini=y
+
+# USB + Modem Support
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-serial-option=y
+CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
+CONFIG_PACKAGE_uqmi=y
+CONFIG_PACKAGE_luci-proto-qmi=y
+
+# GPIO & Button
+CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
