--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Upload firmware
         uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt-MT7628-Fibocom
+          name: OpenWrt-MT7628-LTE
           path: openwrt/bin/targets/
