--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,28 @@
-name: Build OpenWrt MT7628 + Fibocom L716
+name: Auto Commit AccessGo Build
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
+  update-firmware-config:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev             python3-distutils rsync unzip zlib1g-dev file wget python3
-
-      - name: Clone OpenWrt source
-        run: |
-          git clone https://github.com/openwrt/openwrt -b openwrt-22.03 openwrt
-          cp config/.config openwrt/.config
-          cp -r files openwrt/files
-
-      - name: Build firmware
-        run: |
-          cd openwrt
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
-          make defconfig
-          make download -j8
-          make -j$(nproc) || make -j1 V=s
-
-      - name: Upload firmware
-        uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt-MT7628-LTE
-          path: openwrt/bin/targets/
+          token: ${{ secrets.PAT_TOKEN }}
+
+      - name: Configure Git
+        run: |
+          git config user.name "semut-robot"
+          git config user.email "semut1287@gmail.com"
+
+      - name: Tambah file dan modifikasi
+        run: |
+          mkdir -p device/accessgo
+          echo 'CONFIG_TARGET_ramips_mt7628_DEVICE_tplink_mr6400-v5=y' >> config/accessgo.config
+          echo '# AccessGo Custom build - ZBT layout, Fibocom ready' > device/accessgo/README.md
+          git add .
+          git commit -m "Add AccessGo ZBT-based build with Fibocom modem support"
+          git push
